# stitch

./: CMakeLists.txt  LICENSE.txt  README.md
apps/viewer/: CMakeLists.txt  main.cpp
cmake/: FindOpenMP.cmake
glad/include/glad/: glad.h
glad/src/: glad.c
include/: avatar_collisions.hpp  backward_euler_integrator.hpp  bvh.hpp  collisions.hpp  energy.hpp  hinge_energy.hpp  immediate_buckling_energy.hpp  kdop.hpp  linear_elastic_energy.hpp  linear_spring_energy.hpp  mesh.hpp  nonlinear_elastic_energy.hpp  self_collision_energy.hpp  simulation.hpp  stitch_energy.hpp  timer.hpp  types.hpp  xpbd_integrator.hpp
src/: BVH.hpp  admm_integrator.cpp  admm_integrator.hpp  avatar_collisions.hpp  backward_euler_integrator.cpp  bvh.hpp  collisions.hpp  conjugate_gradient.hpp  constraint.hpp  energy.cpp  energy.hpp  gauss_seidel.hpp  hinge_energy.cpp  hinge_energy.hpp  immediate_buckling_energy.cpp  immediate_buckling_energy.hpp  jacobi.hpp  kdop.hpp  linear_elastic_energy.cpp  mesh.hpp  nonlinear_elastic_energy.cpp  nonlinear_elastic_energy.hpp  self_collision_energy.cpp  self_collision_energy.hpp  stitch_energy.cpp  stitch_energy.hpp  successive_over_relaxation.hpp  timer.hpp  triangle_energies.cpp  triangle_energies.hpp  view.cpp
